--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,13 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 /* add your own custom CSS styles here */
-
-.test{
+@layer utilities {
+  .test {
     background-color: brown !important;
+  }
+  .rintu {
+    color: #fefefe;
+  }
 }
